--- a/Dungeon/Makefile
+++ b/Dungeon/Makefile
@@ -129,30 +129,6 @@ Dungeon/fast:
 	$(MAKE) $(MAKESILENT) -f CMakeFiles/Dungeon.dir/build.make CMakeFiles/Dungeon.dir/build
 .PHONY : Dungeon/fast
 
-src/Utilities/Singleton.o: src/Utilities/Singleton.cpp.o
-.PHONY : src/Utilities/Singleton.o
-
-# target to build an object file
-src/Utilities/Singleton.cpp.o:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/Dungeon.dir/build.make CMakeFiles/Dungeon.dir/src/Utilities/Singleton.cpp.o
-.PHONY : src/Utilities/Singleton.cpp.o
-
-src/Utilities/Singleton.i: src/Utilities/Singleton.cpp.i
-.PHONY : src/Utilities/Singleton.i
-
-# target to preprocess a source file
-src/Utilities/Singleton.cpp.i:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/Dungeon.dir/build.make CMakeFiles/Dungeon.dir/src/Utilities/Singleton.cpp.i
-.PHONY : src/Utilities/Singleton.cpp.i
-
-src/Utilities/Singleton.s: src/Utilities/Singleton.cpp.s
-.PHONY : src/Utilities/Singleton.s
-
-# target to generate assembly for a file
-src/Utilities/Singleton.cpp.s:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/Dungeon.dir/build.make CMakeFiles/Dungeon.dir/src/Utilities/Singleton.cpp.s
-.PHONY : src/Utilities/Singleton.cpp.s
-
 src/entities/Entity.o: src/entities/Entity.cpp.o
 .PHONY : src/entities/Entity.o
 
@@ -561,6 +537,30 @@ src/render/TextureLoaderStrategy/SingleTextureLoader.cpp.s:
 	$(MAKE) $(MAKESILENT) -f CMakeFiles/Dungeon.dir/build.make CMakeFiles/Dungeon.dir/src/render/TextureLoaderStrategy/SingleTextureLoader.cpp.s
 .PHONY : src/render/TextureLoaderStrategy/SingleTextureLoader.cpp.s
 
+src/render/TextureLoaderStrategy/Singleton.o: src/render/TextureLoaderStrategy/Singleton.cpp.o
+.PHONY : src/render/TextureLoaderStrategy/Singleton.o
+
+# target to build an object file
+src/render/TextureLoaderStrategy/Singleton.cpp.o:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/Dungeon.dir/build.make CMakeFiles/Dungeon.dir/src/render/TextureLoaderStrategy/Singleton.cpp.o
+.PHONY : src/render/TextureLoaderStrategy/Singleton.cpp.o
+
+src/render/TextureLoaderStrategy/Singleton.i: src/render/TextureLoaderStrategy/Singleton.cpp.i
+.PHONY : src/render/TextureLoaderStrategy/Singleton.i
+
+# target to preprocess a source file
+src/render/TextureLoaderStrategy/Singleton.cpp.i:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/Dungeon.dir/build.make CMakeFiles/Dungeon.dir/src/render/TextureLoaderStrategy/Singleton.cpp.i
+.PHONY : src/render/TextureLoaderStrategy/Singleton.cpp.i
+
+src/render/TextureLoaderStrategy/Singleton.s: src/render/TextureLoaderStrategy/Singleton.cpp.s
+.PHONY : src/render/TextureLoaderStrategy/Singleton.s
+
+# target to generate assembly for a file
+src/render/TextureLoaderStrategy/Singleton.cpp.s:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/Dungeon.dir/build.make CMakeFiles/Dungeon.dir/src/render/TextureLoaderStrategy/Singleton.cpp.s
+.PHONY : src/render/TextureLoaderStrategy/Singleton.cpp.s
+
 src/render/TextureRegistry.o: src/render/TextureRegistry.cpp.o
 .PHONY : src/render/TextureRegistry.o
 
@@ -594,9 +594,6 @@ help:
 	@echo "... edit_cache"
 	@echo "... rebuild_cache"
 	@echo "... Dungeon"
-	@echo "... src/Utilities/Singleton.o"
-	@echo "... src/Utilities/Singleton.i"
-	@echo "... src/Utilities/Singleton.s"
 	@echo "... src/entities/Entity.o"
 	@echo "... src/entities/Entity.i"
 	@echo "... src/entities/Entity.s"
@@ -648,6 +645,9 @@ help:
 	@echo "... src/render/TextureLoaderStrategy/SingleTextureLoader.o"
 	@echo "... src/render/TextureLoaderStrategy/SingleTextureLoader.i"
 	@echo "... src/render/TextureLoaderStrategy/SingleTextureLoader.s"
+	@echo "... src/render/TextureLoaderStrategy/Singleton.o"
+	@echo "... src/render/TextureLoaderStrategy/Singleton.i"
+	@echo "... src/render/TextureLoaderStrategy/Singleton.s"
 	@echo "... src/render/TextureRegistry.o"
 	@echo "... src/render/TextureRegistry.i"
 	@echo "... src/render/TextureRegistry.s"
